[package]
name = "http-proxy"
version = "0.1.0"
authors = ["Luke Tchang <ltchang@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
threadpool = "1.8.1"
http = "0.2.2"
httparse = "1.3.4"
dns-lookup = "1.0.5"